--- a/hobbies.html
+++ b/hobbies.html
@@ -7,9 +7,9 @@
 <body>
 <h3>Hobbies</h3>
 <ol>
-    <li><a href="https://www.youtube.com/watch?v=ygm2zMn2QMg">Playing Cricket</a></li>
-    <li><a href="https://www.youtube.com/watch?v=uWtlvFijc3o">Watching Movies</a></li>
-    <li><a href="https://www.youtube.com/watch?v=7CNeqA9PBYE">Listening Songs</a></li>
+    <li>Playing Cricket/li>
+    <li>Watching Movies</li>
+    <li>Listening Songs</li>
 </ol>
 </body>
 </html>
